changes in validations and exception handling; new class ControllerAdvice